@@ -1,5 +1,8 @@
 2012-04-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* gnus-msg.el (gnus-inews-insert-gcc): Protect against when we don't
+	have a group name.
+
 	* gnus-art.el (article-wash-html): Ensure that we insert the HTML into
 	a multibyte buffer (bug#7410).
 	(article-wash-html): Parse the original article buffer to get the
